refactor(doctorservice): apply clean architecture patterns
- Add common-lib module with shared ApiResponse, custom exceptions, GlobalExceptionHandler
- Replace RuntimeException with ResourceNotFoundException and ConflictException
- Add DoctorResponse DTO, remove entity exposure from API layer
- Add entity->DTO mapping in service layer via toResponse() method
- Push search filter to DB level in DoctorRepository
- Remove System.out.println, replace with proper log statements
- Fix HTTP verbs: reject endpoint changed POST->PUT
- Remove null checks on JPA results